# quant-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV_PLAN.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
docs/: paper_trading_setup.md
examples/: smoke_strategy.py
examples/notebooks/: example_backtest.ipynb  example_data.ipynb  example_optimizer.ipynb  example_risk.ipynb  tear_sheet.html
quant_trading/: __init__.py  backtesting.py  broker.py  risk.py  strategy.py
scripts/: README.md  run_smoke_strategy.py  verify_ib_connection.py
src/quant_trading/: __init__.py
src/quant_trading/backtesting/: base_strategy.py  commission.py  engine.py  performance.py  sizing.py
src/quant_trading/data/: __init__.py  cache.py  loaders.py  universe.py
src/quant_trading/data/apis/: __init__.py  base_connector.py  fama_french_connector.py  ibkr_connector.py  yfinance_connector.py
src/quant_trading/execution/: __init__.py  base_adapter.py  ibkr_adapter.py  order_manager.py  runner.py  safety.py
src/quant_trading/optim/: __init__.py  allocator.py  constraints.py  covariance.py  diagnostics.py  factor.py  mean_variance.py  risk_parity.py
src/quant_trading/risk/: __init__.py  contribution.py  drawdown.py  metrics.py  rolling.py  stress.py  var.py
src/quant_trading/signals/: __init__.py  base.py
tests/: test_backtesting.py  test_data_loaders.py  test_execution.py  test_optimizer.py  test_risk.py  test_toolkit.py
tests/integration/: test_ibkr_paper.py
